--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-toastify": "^5.4.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
